@@ -6,15 +6,27 @@ on:
 
 jobs:
   build-on-pi:
-    runs-on: ${{ matrix.os }}
+    runs-on: [[self-hosted, linux, ARM, pi-3], [self-hosted, linux, ARM64, pi-4]]
     strategy:
       matrix:
-        os: [[self-hosted, linux, ARM, pi-3], [self-hosted, linux, ARM64, pi-4]]
-        enterprise: ['1', '']
+        include:
+          - name: "synergy"
+            remote_folder: "v1-core-standard"
+            enterprise: ""
+            business: ""
+          - name: "synergy-enterprise"
+            remote_folder: "v1-core-enterprise"
+            enterprise: "1"
+            business: ""
+          - name: "synergy-business"
+            remote_folder: "v1-core-business"
+            enterprise: ""
+            business: "1"
     env:
       GIT_COMMIT: ${{ github.sha }}
       DEB_BUILD_OPTIONS: parallel=1
       SYNERGY_ENTERPRISE: ${{ matrix.enterprise }}
+      SYNERGY_BUSINESS: ${{ matrix.business }}
 
     steps:
     - uses: actions/checkout@v2
@@ -37,14 +49,8 @@ jobs:
         echo "::set-output name=SYNERGY_VERSION::${SYNERGY_VERSION}"
         echo "::set-output name=SYNERGY_REVISION::${SYNERGY_REVISION}"
         echo "::set-output name=SYNERGY_DEB_VERSION::${SYNERGY_DEB_VERSION}"
-        if [ "$SYNERGY_ENTERPRISE" == '1' ]
-        then
-            echo "::set-output name=SYNERGY_REMOTE_FOLDER::v1-core-enterprise/${SYNERGY_VERSION}/${SYNERGY_VERSION_STAGE}/b${SYNERGY_VERSION_BUILD}-${SYNERGY_REVISION}"
-            echo "::set-output name=SYNERGY_PACKAGE_NAME::synergy-enterprise"
-        else
-            echo "::set-output name=SYNERGY_REMOTE_FOLDER::v1-core-standard/${SYNERGY_VERSION}/${SYNERGY_VERSION_STAGE}/b${SYNERGY_VERSION_BUILD}-${SYNERGY_REVISION}"
-            echo "::set-output name=SYNERGY_PACKAGE_NAME::synergy"
-        fi
+        echo "::set-output name=SYNERGY_REMOTE_FOLDER::${{ matrix.remote_folder }}/${SYNERGY_VERSION}/${SYNERGY_VERSION_STAGE}/b${SYNERGY_VERSION_BUILD}-${SYNERGY_REVISION}"
+        echo "::set-output name=SYNERGY_PACKAGE_NAME::${{ matrix.name }}"
 
     - name: Build deb
       env:
