@@ -28,16 +28,21 @@ LicenseManager::LicenseManager(AppConfig* appConfig) :
     m_serialKey(appConfig->edition()) {
 }
 
-std::pair<bool, QString>
+void
 LicenseManager::setSerialKey(SerialKey serialKey, bool acceptExpired)
 {
-    std::pair<bool, QString> ret (true, "");
     time_t currentTime = ::time(0);
 
     if (!acceptExpired && serialKey.isExpired(currentTime)) {
-        ret.first = false;
-        ret.second = "Serial key expired";
-        return ret;
+        throw std::runtime_error("Serial key expired");
+    }
+
+    if (!serialKey.isValid()) {
+        #ifdef SYNERGY_BUSINESS
+        throw std::runtime_error("The serial key is not compatible with the business version of Synergy.");
+        #else
+        throw std::runtime_error("The serial key is not compatible with the consumer version of Synergy.");
+        #endif
     }
 
     if (serialKey != m_serialKey) {
@@ -54,8 +59,6 @@ LicenseManager::setSerialKey(SerialKey serialKey, bool acceptExpired)
             emit editionChanged(m_serialKey.edition());
         }
     }
-
-    return ret;
 }
 
 void
@@ -93,7 +96,7 @@ LicenseManager::activeEditionName() const
     return getEditionName(activeEdition(), m_serialKey.isTrial());
 }
 
-SerialKey
+const SerialKey&
 LicenseManager::serialKey() const
 {
     return m_serialKey;
