@@ -31,12 +31,11 @@ class LicenseManager: public QObject
 
 public:
     LicenseManager(AppConfig* appConfig);
-    std::pair<bool, QString> setSerialKey(SerialKey serialKey,
-                                          bool acceptExpired = false);
+    void setSerialKey(SerialKey serialKey, bool acceptExpired = false);
     void refresh();
     Edition activeEdition() const;
     QString activeEditionName() const;
-    SerialKey serialKey() const;
+    const SerialKey& serialKey() const;
     void skipActivation() const;
     void notifyUpdate(QString fromVersion, QString toVersion) const;
     static QString getEditionName(Edition edition, bool trial = false);
