@@ -101,7 +101,7 @@ SerialKey::isValid() const
 {
     bool Valid = true;
 
-    if (m_edition.getType() == kUnregistered || isExpired(::time(0)))
+    if (!m_edition.isValid() || isExpired(::time(0)))
     {
         Valid = false;
     }
