@@ -34,6 +34,8 @@ public:
 	void setType(Edition type);
 	void setType(const std::string& type);
 
+	bool isValid() const;
+
 	static const std::string PRO;
 	static const std::string PRO_CHINA;
 	static const std::string BASIC;
